welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:17: error: not found: value n
      ecritMessage(n)
                   ^ColumnByColumn:18: error: not found: value n
      n=n+1
      ^ColumnByColumn:21: error: not found: value n
      ecritMessage(n)
                   ^ColumnByColumn:22: error: not found: value n
      n=n+1
      ^